--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Primary Meta Tags -->
+    <title>Wiz@rd Group Holdings</title>
+    <meta name="title" content="Wiz@rd Group Holdings | Innovating Gaming, AI, and Tech Solutions" />
+    <meta name="description" content="WIZRD Group Holdings leads innovation across Gaming, Artificial Intelligence, Cloud, and App Development. Empowering the digital future through creativity and technology." />
+    <meta name="keywords" content="WIZRD Group Holdings, TechCom, AI development, game development, app development, cloud solutions, Kenya tech company, innovation, software development" />
+    <meta name="author" content="Wiz@rd Group Holdings" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wizrdgroupholdings.vercel.app/" />
+    <meta property="og:title" content="Wiz@rd Group Holdings | Innovating Gaming, AI, and Tech Solutions" />
+    <meta property="og:description" content="Wiz@rd Group Holdings leads innovation across Gaming, Artificial Intelligence, Cloud, and App Development." />
+    <meta property="og:image" content="https://wizrdgroupholdings.vercel.app/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://wizrdgroupholdings.vercel.app/" />
+    <meta name="twitter:title" content="Wiz@rd Group Holdings | Innovating Gaming, AI, and Tech Solutions" />
+    <meta name="twitter:description" content="Wiz@rd Group Holdings leads innovation across Gaming, Artificial Intelligence, Cloud, and App Development." />
+    <meta name="twitter:image" content="https://wizrdgroupholdings.vercel.app/og-image.png" />
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wiz@rd Group Holdings</title>
   </head>
   <body>
     <div id="root"></div>
