--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://wizrdgroupholdings.vercel.app/" />
     <meta property="og:title" content="Wiz@rd Group Holdings | Innovating Gaming, AI, and Tech Solutions" />
     <meta property="og:description" content="Wiz@rd Group Holdings leads innovation across Gaming, Artificial Intelligence, Cloud, and App Development." />
-    <meta property="og:image" content="https://wizrdgroupholdings.vercel.app/og-image.png" />
+    <meta property="og:image" content="https://wizrdgroupholdings.vercel.app/banner.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://wizrdgroupholdings.vercel.app/" />
     <meta name="twitter:title" content="Wiz@rd Group Holdings | Innovating Gaming, AI, and Tech Solutions" />
     <meta name="twitter:description" content="Wiz@rd Group Holdings leads innovation across Gaming, Artificial Intelligence, Cloud, and App Development." />
-    <meta name="twitter:image" content="https://wizrdgroupholdings.vercel.app/og-image.png" />
+    <meta name="twitter:image" content="https://wizrdgroupholdings.vercel.app/banner.png" />
 
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.png" />
