--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="snIGV412QLw8ZPxLPgpnCn7rgd-ycOSDp_9IIJhWyvU" />
   </head>
   <body>
     <div id="root"></div>
